Updated build system so that debug and production builds can have different C++ flags.  Cleaned up the test folder a bit more.
All tests running and passing on Summit.

--- a/sites/summit/Makefile.site
+++ b/sites/summit/Makefile.site
@@ -25,7 +25,7 @@ CXXFLAGS_DEBUG   = -g -O0 -DGRID_LOG -m64
 CUCOMP       = nvcc
 CUFLAGS_PROD = -ccbin=pgc++ -O3 -m64 -gencode arch=compute_70,code=sm_70
 
-LDFLAGS_STD = -lpthread -lstdc++
+LDFLAGS_STD = -lpthread -lstdc++ -lcudart -L$(CUDADIR)/lib64
 
 # Define the following backend-related flags:
 #  - CXXFLAGS_AMREX: Flags for AMReX backend (e.g. include dir)
