--- a/test/Runtime/cpu/Makefile.test
+++ b/test/Runtime/cpu/Makefile.test
@@ -1,20 +1,18 @@
 # Define the desired binary name with BINARYNAME
-BINARYNAME     = test_runtime_cpu.x
+BINARYNAME          = test_runtime_cpu.x
 
 # Define relevant paths
-TESTDIR        = $(BASEDIR)/test/Runtime
-TESTBASEDIR    = $(BASEDIR)/test/Base
+RUNTIMEDIR          = $(BASEDIR)/test/Runtime
+TESTDIR             = $(RUNTIMEDIR)/cpu
+TESTBASEDIR         = $(BASEDIR)/test/Base
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST  = -I$(TESTBASEDIR) -I$(TESTDIR) -I$(TESTDIR)/cpu
-LDFLAGS_TEST   =
-
-# This test uses Google Test
-CXXFLAGS_TEST += $(CXXFLAGS_GTEST)
-LDFLAGS_TEST  += $(LIB_GTEST)
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+LDFLAGS_TEST        = $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
-SRCS_TEST      = \
+SRCS_TEST = \
     $(TESTBASEDIR)/setInitialConditions.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
     $(TESTBASEDIR)/errorEstBlank.cpp \
@@ -25,6 +23,6 @@ SRCS_TEST      = \
     $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernels_tile_cpu.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/testRuntime.cpp \
-    $(TESTDIR)/runRuntimeTests.cpp
+    $(RUNTIMEDIR)/testRuntime.cpp \
+    $(RUNTIMEDIR)/runRuntimeTests.cpp
 
