--- a/test/CudaBackend/Makefile.test
+++ b/test/CudaBackend/Makefile.test
@@ -1,32 +1,25 @@
 # Define the desired binary name with BINARYNAME
-BINARYNAME     = test_cuda_backend.x
+BINARYNAME          = test_cuda_backend.x
 
 # Define relevant paths
-TESTDIR        = $(BASEDIR)/test/CudaBackend
+TESTDIR             = $(BASEDIR)/test/CudaBackend
 
 # Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST  = -I$(TESTDIR) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CUFLAGS_TEST   = -I$(TESTDIR) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-LDFLAGS_TEST   =
-
-# This test uses Google Test
-CXXFLAGS_TEST += $(CXXFLAGS_GTEST)
-CUFLAGS_TEST  += $(CUFLAGS_GTEST)
-LDFLAGS_TEST  += $(LIB_GTEST)
-
-# This test uses OACC
-CXXFLAGS_TEST += $(OACC_FLAGS)
-LDFLAGS_TEST  += $(OACC_FLAGS)
+CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
+CXXFLAGS_TEST_PROD  = -I$(TESTDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
+CUFLAGS_TEST        = -I$(TESTDIR) $(CUFLAGS_GTEST)                -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
+LDFLAGS_TEST        = $(LIB_GTEST) $(OACC_FLAGS)
 
 # Define list of sources in SRCS_TEST
-SRCS_TEST      = \
+SRCS_TEST = \
 	$(SRCDIR)/DataPacket.cpp \
 	$(SRCDIR)/MoverUnpacker.cpp \
 	$(TESTDIR)/runCudaBackendTests.cpp
 
-CU_SRCS = $(SRCDIR)/CudaGpuEnvironment.cu \
-          $(SRCDIR)/CudaDataPacket.cu \
-          $(SRCDIR)/CudaStreamManager.cu \
-          $(SRCDIR)/CudaMemoryManager.cu \
-          $(TESTDIR)/testCudaStreamManager.cu
+CU_SRCS = \
+	$(SRCDIR)/CudaGpuEnvironment.cu \
+	$(SRCDIR)/CudaDataPacket.cu \
+	$(SRCDIR)/CudaStreamManager.cu \
+	$(SRCDIR)/CudaMemoryManager.cu \
+	$(TESTDIR)/testCudaStreamManager.cu
 
