--- a/test/Grid/Makefile.test
+++ b/test/Grid/Makefile.test
@@ -1,17 +1,17 @@
 # Define the desired binary name with BINARYNAME
-BINARYNAME    = test_grid_cpp.x
+BINARYNAME          = test_grid_cpp.x
 
 # Define relevant paths
-TESTDIR       = $(BASEDIR)/test/Grid
-TESTBASEDIR   = $(BASEDIR)/test/Base
+TESTDIR             = $(BASEDIR)/test/Grid
+TESTBASEDIR         = $(BASEDIR)/test/Base
 
-# Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
-
-LDFLAGS_TEST  = $(LIB_GTEST)
+# Define compiler flags in CXXFLAGS_TEST_*
+CXXFLAGS_TEST_DEBUG = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTBASEDIR) -I$(TESTDIR) $(CXXFLAGS_GTEST)
+LDFLAGS_TEST        = $(LIB_GTEST)
 
 # Define list of sources in SRCS_TEST
-SRCS_TEST      = \
+SRCS_TEST = \
     $(TESTDIR)/runGridTest.cpp \
     $(TESTDIR)/gridUnitTest.cpp \
     $(TESTBASEDIR)/setInitialConditions_tile_cpu.cpp \
