--- a/test/Sedov/cpu/Makefile.test
+++ b/test/Sedov/cpu/Makefile.test
@@ -1,16 +1,17 @@
 # Define the desired binary name with BINARYNAME
-BINARYNAME    = sedov_cpu.x
+BINARYNAME          = sedov_cpu.x
 
 # Define relevant paths
-SEDOVDIR      = $(BASEDIR)/test/Sedov
-TESTDIR       = $(BASEDIR)/test/Sedov/cpu
+SEDOVDIR            = $(BASEDIR)/test/Sedov
+TESTDIR             = $(BASEDIR)/test/Sedov/cpu
 
-# Define compiler flags in CXXFLAGS_TEST
-CXXFLAGS_TEST = -I$(SEDOVDIR) -I$(TESTDIR)
-LDFLAGS_TEST  =
+# Define compiler flags in CXXFLAGS_TEST_*
+CXXFLAGS_TEST_DEBUG = -I$(SEDOVDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_PROD  = -I$(SEDOVDIR) -I$(TESTDIR)
+LDFLAGS_TEST        =
 
 # Define list of sources in SRCS_TEST
-SRCS_TEST      = \
+SRCS_TEST = \
 	$(SEDOVDIR)/Driver_data.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/Eos_idealGammaDensIe.cpp \
