--- a/test/Sedov/mpi/Makefile.test
+++ b/test/Sedov/mpi/Makefile.test
@@ -13,6 +13,7 @@ LDFLAGS_TEST        =
 # Define list of sources in SRCS_TEST
 SRCS_TEST = \
 	$(SEDOVDIR)/Driver_data.cpp \
+	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/Eos_idealGammaDensIe.cpp \
 	$(SEDOVDIR)/Io.cpp \
