--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ docs/OrchestrationSystem.aux
 docs/OrchestrationSystem.pdf
 docs/data\ types.pdf
 docs/GridPolymorphism.pdf
+docs/doxygen/html
+docs/doxygen/latex
 sites/*/test_threadteam_cpp.x
 sites/*/test_runtime_null_cpp.x
 sites/*/gather_data_cpp.x
