--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 */.DS_Store
 .ipynb_checkpoints
+ctags
 gatherDataCpp_*_*_*_*_*_*.dat
 gatherDataF2003_*_*_*_*_*_*.dat
 docs/OrchestrationSystem.log
