Update setup script so that a given makefile argument is for the site.  See if this can get tests running in CI.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,9 @@ stages:
   - test
   - after_success
 
+variables:
+ RUNTIME_DEP_PATH: /nfs/gce/projects/Milhoja/deps
+
 test_gnu:
  stage: test
  script:
@@ -15,9 +18,9 @@ test_gnu:
  - module load gcc/7.5.0-7sxdzdq
  - module load mpich/3.3.2-gnu
  - module load anaconda3/2020.02
- - ./setup.py -t Grid -d 1 -p grid_1d.par -s gce && cd build && make -j4 all test
- - ./setup.py -t Grid -d 2 -p grid_2d.par -s gce && cd build && make -j4 all test
- - ./setup.py -t Grid -d 3 -p grid_3d.par -s gce && cd build && make -j4 all test
+ - ./setup.py -t Grid -d 1 -p grid_1d.par -s gce -M Makefile.site.ci && pushd build && make -j4 all && make test && popd
+ - ./setup.py -t Grid -d 2 -p grid_2d.par -s gce -M Makefile.site.ci && pushd build && make -j4 all && make test && popd
+ - ./setup.py -t Grid -d 3 -p grid_3d.par -s gce -M Makefile.site.ci && pushd build && make -j4 all && make test && popd
 
 test_doxygen:
  stage: test
