(Issue #31) Start adding in a polymorhpic backend design.  Influenced by Tom's Grid unit design.
Minor testing on Summit.  Committing for testing on GCE.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -19,6 +19,7 @@ SRCS_BASE       = \
     $(SRCDIR)/Tile.cpp \
     $(SRCDIR)/TileAmrex.cpp \
     $(SRCDIR)/Runtime.cpp \
+    $(SRCDIR)/Backend.cpp \
     $(SRCDIR)/OrchestrationLogger.cpp \
     $(SRCDIR)/RuntimeElement.cpp \
     $(SRCDIR)/ThreadTeam.cpp \
