--- a/test/CudaBackend/Makefile.test
+++ b/test/CudaBackend/Makefile.test
@@ -14,6 +14,7 @@ LDFLAGS_TEST        = $(LIB_GTEST) $(OACC_FLAGS)
 SRCS_TEST = \
 	$(SRCDIR)/DataPacket.cpp \
 	$(SRCDIR)/MoverUnpacker.cpp \
+	$(SRCDIR)/CudaBackend.cpp \
 	$(TESTDIR)/runCudaBackendTests.cpp
 
 CU_SRCS = \
