(Issue #31) The StreamManager base class is no longer necessary now that calling code gets streams from the backend - a backend can choose to use a stream manager behind the scenes if it wants, but need not.
Maintained NullBackend's interface up-to-date so that hopefully GCE tests won't
fail.

Basic GPU tests passing on Summit.

--- a/src/Makefile.base
+++ b/src/Makefile.base
@@ -27,5 +27,4 @@ SRCS_BASE       = \
     $(SRCDIR)/ThreadTeamTerminating.cpp \
     $(SRCDIR)/ThreadTeamRunningOpen.cpp \
     $(SRCDIR)/ThreadTeamRunningClosed.cpp \
-    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp \
-    $(SRCDIR)/StreamManager.cpp
+    $(SRCDIR)/ThreadTeamRunningNoMoreWork.cpp
