--- a/test/Sedov/gpu/Makefile.test
+++ b/test/Sedov/gpu/Makefile.test
@@ -15,13 +15,13 @@ LDFLAGS_TEST        = $(OACC_FLAGS)
 SRCS_TEST = \
 	$(SRCDIR)/DataPacket.cpp \
 	$(SRCDIR)/MoverUnpacker.cpp \
-	$(SRCDIR)/CudaBackend.cpp \
 	$(SEDOVDIR)/errorEstBlank.cpp \
 	$(SEDOVDIR)/ProcessTimer.cpp \
 	$(SEDOVDIR)/sim_setInitialConditions.cpp \
 	$(SEDOVDIR)/Simulation_setInitialConditions_tile_cpu.cpp \
     $(SEDOVDIR)/hy_computeFluxesHll.cpp \
     $(SEDOVDIR)/hy_updateSolutionHll.cpp \
+	$(TESTDIR)/DataPacket_Hydro_gpu_1.cpp \
 	$(TESTDIR)/hy_computeSoundSpeedHll_oacc_summit.cpp \
 	$(TESTDIR)/hy_computeFluxesHll_X_oacc_summit.cpp \
 	$(TESTDIR)/hy_computeFluxesHll_Y_oacc_summit.cpp \
@@ -51,7 +51,7 @@ SRCS_TEST = \
 	$(TESTDIR)/sedov_gpu.cpp
 
 CU_SRCS = \
+	$(SRCDIR)/CudaBackend.cu \
 	$(SRCDIR)/CudaGpuEnvironment.cu \
-	$(SRCDIR)/CudaDataPacket.cu \
 	$(SRCDIR)/CudaStreamManager.cu \
 	$(SRCDIR)/CudaMemoryManager.cu
