(Issue #31) The Runtime/cuda test is no longer CUDA-specific.  Renamed to Runtime/gpu to match Sedov case.

--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -1,15 +1,15 @@
 # Define the desired binary name with BINARYNAME
-BINARYNAME          = test_runtime_cuda.x
+BINARYNAME          = test_runtime_gpu.x
 
 # Define relevant paths
 RUNTIMEDIR          = $(BASEDIR)/test/Runtime
-TESTDIR             = $(RUNTIMEDIR)/cuda
+TESTDIR             = $(RUNTIMEDIR)/gpu
 TESTBASEDIR         = $(BASEDIR)/test/Base
 
 # Define compiler flags in CXXFLAGS_TEST
 CXXFLAGS_TEST_DEBUG = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
 CXXFLAGS_TEST_PROD  = -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) $(OACC_FLAGS) -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
-CUFLAGS_TEST        = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CUFLAGS_GTEST)                -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
+CUFLAGS_TEST        = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CUFLAGS_GTEST)                             -DUSE_CUDA_BACKEND -DENABLE_OPENACC_OFFLOAD
 LDFLAGS_TEST        = $(LIB_GTEST) $(OACC_FLAGS)
 
 # Define list of sources in SRCS_TEST
