(Issue #31) Data packets can now acquire and manage extra streams that patch code can use to manage computation only.  This is good as the extra streams are now acquired at packing rather than in the patch code.   This removes the possibility of deadlocking on acquiring streams - if a stream isn't available, the requesting packet is blocked until another stream releases a stream.
Made use of this facility in the runtime/gpu tests.  These ran on Summit with no
failures due to an inability to acquire an extra stream.

--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -34,7 +34,8 @@ SRCS_TEST = \
     $(TESTBASEDIR)/computeLaplacianFusedKernelsWeak_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernelsStrong_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/DataPacket_gpu_1.cpp \
+    $(TESTDIR)/DataPacket_gpu_1_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_2_stream.cpp \
     $(RUNTIMEDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp
 
