(Issue #36) Evolve the Sedov/GPU infrastructure so that we can build and run many different slight variations of the same problem as part of testing and timing.
The GPU parfiles now require that several values be replaced with something like
sed.  The intention is that a build script do this.

Not saving the final result for the moment to keep file management simple as I
develop/test.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ sites/summit/gatherDataF2003.*
 sites/summit/sedovCpuCpp.*
 sites/summit/sedovGpuCpp.*
 sites/summit/sedovBaselineCpp.*
+sites/summit/sedov_[23]D_cartesian_gpu.par
 sites/bebop/build/build_*.log
 sites/bebop/test_threadteam_cpp_bebop.[oe]*
 sites/bebop/test_runtime_cpp_bebop.[oe]*
